Fix scoring system: score-based winners & round multipliers
🏆 Fixed Winner Determination:
- Winners now determined by TOTAL SCORE first (270 beats 200!)
- Completion status only used as tie-breaker for equal scores
- Added detailed logging for winner selection
- No more losing despite having higher score

📈 Round-Based Score Multipliers:
- Round 1: 1.0x (standard scoring)
- Round 2: 1.5x multiplier
- Round 3: 2.0x multiplier
- Rounds 4-6: 2.5x multiplier
- Finals (Round 7+): 3.0x multiplier

🎯 Escalating Stakes Examples:
- Round 1: Green letter = 10 points
- Round 2: Green letter = 15 points (10 × 1.5)
- Round 3: Green letter = 20 points (10 × 2.0)
- Finals: Green letter = 30 points (10 × 3.0)

💬 Enhanced Feedback:
- Shows multiplier in point messages: '+30 points (3x multiplier)!'
- Completion bonus also scales with rounds
- Clear indication of round-based bonuses

🎮 Balanced Competition:
- Early rounds focus on building solid scores
- Later rounds have much higher stakes
- Makes tournament progression more dramatic
- Score advantages matter more than pure completion

No more unfair losses - highest score wins!

--- a/wordle_battle_royale_fixed.html
+++ b/wordle_battle_royale_fixed.html
@@ -1278,9 +1278,11 @@
 
             // Show scoring feedback
             if (correct) {
-                showMessage(`🎉 Correct! +${totalScore} points total (${earlyBonus} early bonus!)`, 'success');
+                const roundText = gameState.round > 1 ? ` (Round ${gameState.round} bonus!)` : '';
+                showMessage(`🎉 Correct! +${totalScore} points total${roundText}`, 'success');
             } else if (pointsEarned > 0) {
-                showMessage(`+${pointsEarned} points! Total: ${totalScore}`, 'info');
+                const roundText = gameState.round > 1 ? ` (${gameState.round}x multiplier)` : '';
+                showMessage(`+${pointsEarned} points${roundText}! Total: ${totalScore}`, 'info');
             }
 
             // Update keyboard colors after animation
