Fix and boost completion bonuses - make early solving rewarding
🎯 Massive Completion Bonus Increase:
- Guess 1: 150 points bonus (was ~40)
- Guess 2: 120 points bonus (was ~30)
- Guess 3: 90 points bonus (was ~20)
- Guess 4: 60 points bonus (was ~10)
- Guess 5: 40 points bonus
- Guess 6: 25 points bonus

📈 Scaling with Round Multipliers:
- Round 1: 1st guess = 150 bonus
- Round 2: 1st guess = 225 bonus (150 × 1.5)
- Round 3: 1st guess = 300 bonus (150 × 2.0)
- Finals: 1st guess = 450 bonus (150 × 3.0)

🎮 Expected Total Scores Now:
- Perfect 1st guess Round 1: ~200 points (50 letters + 150 bonus)
- Perfect 2nd guess Round 1: ~170 points (50 letters + 120 bonus)
- Good 3rd guess Round 1: ~120+ points (30+ letters + 90 bonus)

✨ Enhanced Feedback:
- Shows completion bonus clearly: '+225 completion bonus!'
- Better messaging: 'WORD SOLVED! 300 points (+150 completion bonus!)'
- Added extensive server logging for debugging

🚀 Impact:
- Early completion now VERY rewarding
- Speed matters significantly more
- Risk/reward balance for aggressive vs safe play
- Tournament progression feels more dramatic

No more tiny 30-point games - solving fast gives huge advantages!

--- a/wordle_battle_royale_fixed.html
+++ b/wordle_battle_royale_fixed.html
@@ -1278,8 +1278,12 @@
 
             // Show scoring feedback
             if (correct) {
-                const roundText = gameState.round > 1 ? ` (Round ${gameState.round} bonus!)` : '';
-                showMessage(`🎉 Correct! +${totalScore} points total${roundText}`, 'success');
+                let bonusText = '';
+                if (earlyBonus > 0) {
+                    bonusText = ` (+${earlyBonus} completion bonus!)`;
+                }
+                const roundText = gameState.round > 1 ? ` [Round ${gameState.round}]` : '';
+                showMessage(`🎉 WORD SOLVED! ${totalScore} points${bonusText}${roundText}`, 'success');
             } else if (pointsEarned > 0) {
                 const roundText = gameState.round > 1 ? ` (${gameState.round}x multiplier)` : '';
                 showMessage(`+${pointsEarned} points${roundText}! Total: ${totalScore}`, 'info');
