Rebrand to 'Word Royale' to avoid copyright issues
🏷️ Complete Rebranding:
- Changed main title from 'Wordle Battle Royale' to 'WORD ROYALE'
- Updated page title to 'Word Royale - Multiplayer Tournament'
- Modified package.json name and description
- Updated server console logs
- Changed keywords from 'wordle' to 'word-game'

⚖️ Copyright Compliance:
- Avoids potential trademark issues
- Maintains the same great gameplay
- Clean, professional branding
- Tournament focus emphasized

🎮 Same Great Game:
- All features and functionality identical
- Tournament elimination system
- Live scoring and multiplayer
- Just safer branding for public use

Ready for public deployment without copyright concerns!

--- a/wordle_battle_royale_fixed.html
+++ b/wordle_battle_royale_fixed.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordle Battle Royale - Multiplayer</title>
+    <title>Word Royale - Multiplayer Tournament</title>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <style>
         * {
@@ -560,7 +560,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1 class="title">WORDLE BATTLE ROYALE</h1>
+            <h1 class="title">WORD ROYALE</h1>
             <div id="connectionStatus" class="connection-status connecting">Connecting to server...</div>
         </div>
 
